<?xml version="1.0"?>
<package format="2">
  <name>husky_teleop_key</name>
  <version>0.0.0</version>
  <description>The husky_teleop package</description>
  <maintainer email="fer.solerv@hotmail.com">parallels</maintainer>
  <license>TODO</license>  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
